--- a/Finance and Accounting Assistant/src/main/resources/application.yaml
+++ b/Finance and Accounting Assistant/src/main/resources/application.yaml
@@ -1,52 +1,34 @@
 spring:
-  application:
-    name: finance-assistant
-
-  # ── PostgreSQL Database ──────────────────────────────────────────────────────
   datasource:
     url: jdbc:postgresql://localhost:5432/financedb
     username: postgres
     password: vedant
     driver-class-name: org.postgresql.Driver
 
-  # ── JPA / Hibernate ─────────────────────────────────────────────────────────
   jpa:
     hibernate:
-      ddl-auto: validate                   # Flyway manages the schema; Hibernate only validates
-    show-sql: false
+      ddl-auto: validate
+    show-sql: true
     properties:
       hibernate:
-        format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
-  # ── Flyway Migrations ────────────────────────────────────────────────────────
   flyway:
-    enabled: true
-    locations: classpath:db/migration
     baseline-on-migrate: true
+    baseline-version: 1
 
-  # ── Cache (in-memory for development; switch to redis for production) ─────────
-  # FIX: 'simple' mode means no Redis needed. @EnableCaching in CacheConfig
-  # activates it. The old config was missing this — causing @Cacheable to be a no-op.
   cache:
-    type: simple
+    type: simple          # in-memory cache — upgrade to redis when needed
 
-  # ── RabbitMQ ──────────────────────────────────────────────────────────────────
-  # FIX: Added 'required: false' equivalent via TransactionEventPublisher's
-  # @Autowired(required = false) so app starts even if RabbitMQ is offline.
   rabbitmq:
     host: localhost
     port: 5672
     username: guest
     password: guest
 
-  # ── Redis (needed when you switch cache.type: redis) ─────────────────────────
-  data:
-    redis:
-      host: localhost
-      port: 6379
+server:
+  port: 8080
 
-# ── Spring Boot Actuator ──────────────────────────────────────────────────────
 management:
   endpoints:
     web:
@@ -56,13 +38,9 @@ management:
     health:
       show-details: always
 
-# ── Logging ───────────────────────────────────────────────────────────────────
-logging:
-  level:
-    com.financeassistant: DEBUG
-    org.springframework.amqp: WARN
-    org.hibernate.SQL: WARN
-
-# ── Server ────────────────────────────────────────────────────────────────────
-server:
-  port: 8080
+# ── JWT Configuration ─────────────────────────────────────────────────────────
+# Secret must be a Base64-encoded string that decodes to ≥ 32 bytes (256 bits)
+# for HS256. Change this in production — never commit a real secret.
+jwt:
+  secret: bXlTdXBlclNlY3JldEtleUZvckpXVFNpZ25pbmcyMDI2RmluYW5jZUFwcA==
+  expiration: 86400000   # 24 hours in milliseconds
