--- a/finance-frontend/.gitignore
+++ b/finance-frontend/.gitignore
@@ -26,3 +26,11 @@ dist-ssr
 node_modules/
 dist/
 .env
+
+# ─────────────────────────────────────────────────────────────────────────────
+# SECRETS & ENVIRONMENT VARIABLES (CRITICAL)
+# ─────────────────────────────────────────────────────────────────────────────
+.env
+.env.local
+.env.*.local
+*.pem
