--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
 
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────────────
   #  INFRASTRUCTURE
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────────────
 
   postgres:
     image: postgres:16-alpine
@@ -43,8 +43,8 @@ services:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
     ports:
-      - "5672:5672"      # AMQP
-      - "15672:15672"    # Management UI  →  http://localhost:15672
+      - "5672:5672"
+      - "15672:15672"
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
       interval: 15s
@@ -53,9 +53,11 @@ services:
       start_period: 30s
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────────────
   #  SPRING BOOT BACKEND
-  # ─────────────────────────────────────────────────────────────────────────────
+  #  Context points to your actual folder: "Finance and Accounting Assistant"
+  #  You must create a Dockerfile inside that folder (provided separately).
+  # ───────────────────────────────────────────────────────────────────────────
 
   backend:
     build:
@@ -65,22 +67,18 @@ services:
     ports:
       - "8080:8080"
     environment:
-      # ── Database ──────────────────────────────────────────────────────────
       SPRING_DATASOURCE_URL:      jdbc:postgresql://postgres:5432/financedb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: vedant
-      # ── Redis ─────────────────────────────────────────────────────────────
-      SPRING_DATA_REDIS_HOST: redis
-      SPRING_DATA_REDIS_PORT: "6379"
-      SPRING_CACHE_TYPE:      redis
-      # ── RabbitMQ ──────────────────────────────────────────────────────────
-      SPRING_RABBITMQ_HOST:     rabbitmq
-      SPRING_RABBITMQ_PORT:     "5672"
-      SPRING_RABBITMQ_USERNAME: guest
-      SPRING_RABBITMQ_PASSWORD: guest
-      # ── JWT (keep in sync with application.yaml) ──────────────────────────
-      JWT_SECRET:     bXlTdXBlclNlY3JldEtleUZvckpXVFNpZ25pbmcyMDI2RmluYW5jZUFwcA==
-      JWT_EXPIRATION: "86400000"
+      SPRING_DATA_REDIS_HOST:     redis
+      SPRING_DATA_REDIS_PORT:     "6379"
+      SPRING_CACHE_TYPE:          redis
+      SPRING_RABBITMQ_HOST:       rabbitmq
+      SPRING_RABBITMQ_PORT:       "5672"
+      SPRING_RABBITMQ_USERNAME:   guest
+      SPRING_RABBITMQ_PASSWORD:   guest
+      JWT_SECRET:                 bXlTdXBlclNlY3JldEtleUZvckpXVFNpZ25pbmcyMDI2RmluYW5jZUFwcA==
+      JWT_EXPIRATION:             "86400000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -90,9 +88,9 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────────────
   #  PYTHON AI SERVICE
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────────────
 
   finance-ai:
     build:
@@ -103,14 +101,17 @@ services:
       - "5000:5000"
     environment:
       GEMINI_API_KEY: ${GEMINI_API_KEY:-}
+      BACKEND_URL:    http://backend:8080
     volumes:
-      # Persist trained ML models between container restarts
       - ./finance-ai/models:/app/models
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────────────────────
-  #  REACT FRONTEND  (Nginx, port 5173 on host → 80 inside container)
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ───────────────────────────────────────────────────────────────────────────
+  #  REACT FRONTEND
+  # ───────────────────────────────────────────────────────────────────────────
 
   frontend:
     build:
@@ -123,8 +124,5 @@ services:
       - backend
     restart: unless-stopped
 
-# ─────────────────────────────────────────────────────────────────────────────
-#  NAMED VOLUMES
-# ─────────────────────────────────────────────────────────────────────────────
 volumes:
   postgres_data:
