--- a/finance-frontend/nginx.conf
+++ b/finance-frontend/nginx.conf
@@ -5,6 +5,19 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # ── API proxy → Spring Boot backend ──────────────────────────────────────
+    # FIX #7: Forwards /api/* calls from the browser to the backend container.
+    # Without this block, Dashboard relative calls (/api/v1/...) return 404.
+    location /api/ {
+        proxy_pass         http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 60s;
+    }
+
     # ── React Router support ──────────────────────────────────────────────────
     # For any route that doesn't match a real file (e.g. /login, /dashboard),
     # return index.html so React Router handles it client-side.
@@ -20,9 +33,9 @@ server {
     }
 
     # ── Security headers ──────────────────────────────────────────────────────
-    add_header X-Frame-Options       "SAMEORIGIN"   always;
-    add_header X-Content-Type-Options "nosniff"     always;
-    add_header X-XSS-Protection      "1; mode=block" always;
+    add_header X-Frame-Options        "SAMEORIGIN"    always;
+    add_header X-Content-Type-Options "nosniff"       always;
+    add_header X-XSS-Protection       "1; mode=block" always;
 
     # ── Gzip compression ─────────────────────────────────────────────────────
     gzip on;
