--- a/finance-ai/requirements.txt
+++ b/finance-ai/requirements.txt
@@ -1,12 +1,25 @@
+# ── Web framework ────────────────────────────────────────────────────────────
 flask==3.1.0
-openai>=1.0.0
+flask-cors==4.0.1           # FIX: was missing — app.py imports flask_cors
+
+# ── AI / LLM ─────────────────────────────────────────────────────────────────
+google-generativeai>=0.7.0  # FIX: was missing — app.py uses google.generativeai (Gemini)
+# openai>=1.0.0             # REMOVED: app.py no longer uses OpenAI; uses Gemini instead
+
+# ── Machine Learning ─────────────────────────────────────────────────────────
 prophet
 scikit-learn
 joblib
 numpy
 pandas
+
+# ── Message Queue ─────────────────────────────────────────────────────────────
 pika
+
+# ── OCR ──────────────────────────────────────────────────────────────────────
 pillow
 pytesseract
+
+# ── Utilities ─────────────────────────────────────────────────────────────────
 python-dotenv
 requests>=2.31.0
