--- a/Finance and Accounting Assistant/pom.xml
+++ b/Finance and Accounting Assistant/pom.xml
@@ -123,6 +123,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ── Rate Limiting (Bucket4j) ──────────────────────────────────── -->
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.10.1</version>
+        </dependency>
+
+        <!-- ── HTTPS / Redirect support ─────────────────────────────────── -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
