--- a/Finance and Accounting Assistant/Dockerfile
+++ b/Finance and Accounting Assistant/Dockerfile
@@ -1,25 +1,21 @@
-# ─── Stage 1: Build JAR with Maven ───────────────────────────────────────────
-FROM maven:3.9-eclipse-temurin-21-alpine AS build
-
+# ── Stage 1: Build ───────────────────────────────────────────────────────────
+FROM eclipse-temurin:21-jdk AS build
 WORKDIR /app
 
-# Copy pom.xml first so Maven dependency layer is cached
-# (only re-downloads dependencies when pom.xml changes)
-COPY pom.xml .
-RUN mvn dependency:go-offline -B --quiet
+# Copy Maven wrapper and pom first (better caching)
+COPY mvnw ./
+COPY .mvn .mvn
+COPY pom.xml ./
+RUN chmod +x mvnw
+RUN ./mvnw dependency:go-offline -q
 
 # Copy source and build
 COPY src ./src
-RUN mvn clean package -DskipTests -B --quiet
+RUN ./mvnw clean package -DskipTests -q
 
-# ─── Stage 2: Minimal JRE runtime image ──────────────────────────────────────
-FROM eclipse-temurin:21-jre-alpine
-
+# ── Stage 2: Run ─────────────────────────────────────────────────────────────
+FROM eclipse-temurin:21-jre
 WORKDIR /app
-
-# Copy JAR from build stage
 COPY --from=build /app/target/*.jar app.jar
-
 EXPOSE 8080
-
 ENTRYPOINT ["java", "-jar", "app.jar"]
