--- a/finance-frontend/nginx.conf
+++ b/finance-frontend/nginx.conf
@@ -1,44 +1,40 @@
 server {
     listen 80;
-    server_name localhost;
-
     root /usr/share/nginx/html;
     index index.html;
 
-    # ── API proxy → Spring Boot backend ──────────────────────────────────────
-    # FIX #7: Forwards /api/* calls from the browser to the backend container.
-    # Without this block, Dashboard relative calls (/api/v1/...) return 404.
+    # ── Security Headers ─────────────────────────────────────────────────────
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header Referrer-Policy no-referrer-when-downgrade always;
+
+    # ── Proxy: Spring Boot API ───────────────────────────────────────────────
     location /api/ {
-        proxy_pass         http://backend:8080;
-        proxy_http_version 1.1;
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8080/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Authorization $http_authorization;
         proxy_read_timeout 60s;
     }
 
-    # ── React Router support ──────────────────────────────────────────────────
-    # For any route that doesn't match a real file (e.g. /login, /dashboard),
-    # return index.html so React Router handles it client-side.
+    # ── Proxy: Spring Boot Actuator ──────────────────────────────────────────
+    location /actuator/ {
+        proxy_pass http://backend:8080/actuator/;
+        proxy_set_header Host $host;
+    }
+
+    # ── Proxy: Python AI Service ─────────────────────────────────────────────
+    location /ai/ {
+        proxy_pass http://ai-service:5000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_read_timeout 120s;
+        client_max_body_size 10M;
+    }
+
+    # ── React Router: Serve index.html for all frontend routes ───────────────
     location / {
         try_files $uri $uri/ /index.html;
     }
-
-    # ── Cache static assets aggressively ─────────────────────────────────────
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        access_log off;
-    }
-
-    # ── Security headers ──────────────────────────────────────────────────────
-    add_header X-Frame-Options        "SAMEORIGIN"    always;
-    add_header X-Content-Type-Options "nosniff"       always;
-    add_header X-XSS-Protection       "1; mode=block" always;
-
-    # ── Gzip compression ─────────────────────────────────────────────────────
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript
-               text/xml application/xml application/xml+rss text/javascript;
 }
