--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,11 @@ services:
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
-      JWT_SECRET: bXlTdXBlclNlY3JldEtleUZvckpXVFNpZ25pbmcyMDI2RmluYW5jZUFwcA==
+      JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRATION: 86400000
+      RAZORPAY_KEY_ID: ${RAZORPAY_KEY_ID}                        
+      RAZORPAY_KEY_SECRET: ${RAZORPAY_KEY_SECRET}                
+      RAZORPAY_WEBHOOK_SECRET: ${RAZORPAY_WEBHOOK_SECRET} 
       MAIL_HOST: smtp.gmail.com
       MAIL_PORT: 587
       MAIL_USERNAME: ""
