--- a/Finance and Accounting Assistant/src/main/resources/application.yaml
+++ b/Finance and Accounting Assistant/src/main/resources/application.yaml
@@ -1,103 +1,48 @@
-# PATH: Finance and Accounting Assistant/src/main/resources/application.yaml
-#
-# CHANGES vs original:
-#  1. Added razorpay: block with key.id, key.secret, webhook.secret
-#  2. JWT secret fallback removed — MUST be set via env var JWT_SECRET
-#     (commit the placeholder, override in prod via env)
-#  3. Added app.cors.allowed-origins property used by CorsConfig.java
-
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/financedb}
-    username: ${SPRING_DATASOURCE_USERNAME:postgres}
-    password: ${SPRING_DATASOURCE_PASSWORD:vedant}
+    url: jdbc:postgresql://localhost:5432/financedb
+    username: postgres
+    password: vedant
     driver-class-name: org.postgresql.Driver
-    hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
-      connection-timeout: 30000
-      idle-timeout: 600000
-      max-lifetime: 1800000
 
   jpa:
     hibernate:
       ddl-auto: validate
     show-sql: false
-    open-in-view: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
   flyway:
+    enabled: true
     baseline-on-migrate: true
-    baseline-version: 1
-
-  cache:
-    type: ${SPRING_CACHE_TYPE:simple}
+    locations: classpath:db/migration
 
   data:
     redis:
-      host: ${SPRING_DATA_REDIS_HOST:localhost}
-      port: ${SPRING_DATA_REDIS_PORT:6379}
-      timeout: 2000ms
-      lettuce:
-        pool:
-          max-active: 10
-          max-idle: 5
-          min-idle: 1
+      host: localhost
+      port: 6379
 
   rabbitmq:
-    host: ${SPRING_RABBITMQ_HOST:localhost}
-    port: ${SPRING_RABBITMQ_PORT:5672}
-    username: ${SPRING_RABBITMQ_USERNAME:guest}
-    password: ${SPRING_RABBITMQ_PASSWORD:guest}
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
-  mail:
-    host: ${MAIL_HOST:smtp.gmail.com}
-    port: ${MAIL_PORT:587}
-    username: ${MAIL_USERNAME:}
-    password: ${MAIL_PASSWORD:}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-            required: true
-          connectiontimeout: 5000
-          timeout: 5000
-          writetimeout: 5000
+  cache:
+    type: redis
 
-server:
-  port: 8080
-  error:
-    include-message: never
-    include-binding-errors: never
-    include-stacktrace: never
-    include-exception: false
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-  endpoint:
-    health:
-      show-details: when-authorized
-  info:
-    env:
-      enabled: false
-
-# ── JWT ─────────────────────────────────────────────────────────────────────
-# SECURITY: Set JWT_SECRET env var to a 64+ character random string in prod.
-# Never commit a real secret here.
+# ── JWT ───────────────────────────────────────────────────────────────────────
 jwt:
   secret: ${JWT_SECRET:CHANGE_ME_IN_PRODUCTION_USE_A_64_CHAR_RANDOM_STRING_HERE_12345678}
-  expiration-ms: ${JWT_EXPIRATION_MS:86400000}   # 24 hours
+  expiration-ms: ${JWT_EXPIRATION_MS:86400000}
 
 # ── Razorpay ──────────────────────────────────────────────────────────────────
-# Set these env vars before running the app.
-# Get them from: https://dashboard.razorpay.com/app/keys
 razorpay:
   key:
     id: ${RAZORPAY_KEY_ID:rzp_test_YOUR_KEY_ID_HERE}
@@ -105,11 +50,18 @@ razorpay:
   webhook:
     secret: ${RAZORPAY_WEBHOOK_SECRET:YOUR_WEBHOOK_SECRET_HERE}
 
-# ── CORS ──────────────────────────────────────────────────────────────────────
-# In production, replace with your actual deployed frontend URL
+# ── AI Service (Python Flask) ─────────────────────────────────────────────────
+ai:
+  service:
+    url: ${AI_SERVICE_URL:http://localhost:5000}
+
+# ── App config (single app: block — no duplicates!) ───────────────────────────
 app:
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
+  free-tier:
+    max-transactions: 20
+    max-transactions-view: 10
 
 # ── Rate limiting ─────────────────────────────────────────────────────────────
 security:
